--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build V8 (Fuzzilli config) + Fuzzilli → GHCR
+name: Build V8 + Fuzzilli → GHCR
 
 on:
   push:
@@ -18,21 +18,28 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      # -------------------------------------------------
-      # Base system dependencies
-      # -------------------------------------------------
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Free disk before build
+        run: |
+          sudo apt-get clean
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+          sudo rm -rf /var/lib/apt/lists/*
+          rm -rf $HOME/.cache/*
+          df -h
+
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             git curl python3 python3-pip \
             build-essential ninja-build \
-            clang lld pkg-config \
-            ca-certificates
+            clang lld pkg-config ca-certificates
 
-      # -------------------------------------------------
-      # Install Swift (official Swiftly method)
-      # -------------------------------------------------
+      # --- Swift installation (for Fuzzilli) ---
       - name: Install Swift (Swiftly)
         run: |
           curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz
@@ -42,30 +49,18 @@ jobs:
           hash -r
           swift --version
 
-      # -------------------------------------------------
-      # depot_tools (required for V8)
-      # -------------------------------------------------
+      # --- depot_tools and V8 ---
       - name: Install depot_tools
         run: |
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
           echo "$PWD/depot_tools" >> $GITHUB_PATH
 
-      # -------------------------------------------------
-      # Fetch V8
-      # -------------------------------------------------
-      - name: Fetch V8
+      - name: Fetch and build V8
         run: |
           fetch v8
           cd v8
           git checkout main
           gclient sync
-
-      # -------------------------------------------------
-      # Build V8 EXACTLY like Fuzzilli recommends
-      # -------------------------------------------------
-      - name: Build V8 (Fuzzilli fuzzbuild)
-        run: |
-          cd v8
           gn gen out/fuzzbuild --args='
             is_debug=false
             dcheck_always_on=true
@@ -78,9 +73,26 @@ jobs:
           '
           ninja -C out/fuzzbuild d8
 
-      # -------------------------------------------------
-      # Fetch & build Fuzzilli
-      # -------------------------------------------------
+      # --- Save d8 and delete all V8 source to free disk ---
+      - name: Save d8 binary and delete V8 source
+        run: |
+          mkdir -p build-out
+          cp v8/out/fuzzbuild/d8 build-out/
+          rm -rf v8
+          echo "Disk usage after V8 cleanup:"
+          df -h
+
+      # --- Clone and build Fuzzilli ---
+      - name: Cache SwiftPM build dirs
+        uses: actions/cache@v4
+        with:
+          path: |
+            fuzzilli/.build/checkouts
+            fuzzilli/.build/artifacts
+          key: ${{ runner.os }}-swiftpm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-swiftpm-
+
       - name: Clone Fuzzilli
         run: |
           git clone https://github.com/googleprojectzero/fuzzilli.git
@@ -90,15 +102,15 @@ jobs:
           cd fuzzilli
           swift build -c release
 
-      # -------------------------------------------------
-      # Prepare Docker context (generated on the fly)
-      # -------------------------------------------------
-      - name: Prepare Docker image
+      - name: Copy Fuzzilli binary
+        run: |
+          cp fuzzilli/.build/release/Fuzzilli build-out/
+
+      # --- Docker build and GHCR push ---
+      - name: Write Dockerfile
         run: |
           mkdir docker
-          cp v8/out/fuzzbuild/d8 docker/
-          cp fuzzilli/.build/release/Fuzzilli docker/
-
+          mv build-out/* docker/
           cat > docker/Dockerfile << 'EOF'
           FROM ubuntu:22.04
 
@@ -107,20 +119,13 @@ jobs:
               && rm -rf /var/lib/apt/lists/*
 
           WORKDIR /opt/fuzzing
-
           COPY d8 /opt/fuzzing/d8
           COPY Fuzzilli /opt/fuzzing/Fuzzilli
-
           RUN chmod +x d8 Fuzzilli
-
           ENV PATH="/opt/fuzzing:${PATH}"
-
           ENTRYPOINT ["./Fuzzilli"]
           EOF
 
-      # -------------------------------------------------
-      # Build & push to GHCR (no credentials needed)
-      # -------------------------------------------------
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -132,6 +137,6 @@ jobs:
         run: |
           docker build docker -t $IMAGE_NAME:$IMAGE_TAG
 
-      - name: Push Docker image
+      - name: Push Docker image to GHCR
         run: |
           docker push $IMAGE_NAME:$IMAGE_TAG
